# expediente

./: .gitignore  PRD.md  README.md  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.engram/: manifest.json
src/expediente/: __init__.py  app.py  config.py
src/expediente/application/: __init__.py  orchestrator.py
src/expediente/domain/: __init__.py  models.py
src/expediente/llm/: __init__.py  gateway.py
src/expediente/storage/: __init__.py  filesystem.py
src/expediente/ui/: main_window.py
tests/: test_application.py  test_filesystem.py  test_gateway.py  test_ui_smoke.py
