[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "expediente"
version = "0.1.0"
description = "Local-first clinical record foundation for Expediente Vivo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
expediente = "expediente.app:main"

[project.optional-dependencies]
desktop = [
  "PySide6>=6.8",
]
llm = [
  "openai>=2.11",
]
dev = [
  "pytest>=8.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
